# google-drive-recursive-ownership

./: .gitignore  README.md  client_secrets.example.json  pyproject.toml  requirements.txt  transfer.py
googleapiclient_async/: client.py
